# opentelemetry-py

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  app.py  routes.py
ci/: argocd.yaml
k8s/: collector-config.yaml  collector-deployment.yaml  collector-service.yaml  otel-collector-configmap.yaml  service.yaml  webserver-deployment.yaml
k8s/base/: otel-collector-deployment.yaml  otel-collector-monitor.yaml  otel-collector-service.yaml  update-hostname-using-minikube-ip.bash  webserver-deployment.yaml  webserver-ingress.yaml
k8s/monitor/: otel-collector-monitor.yaml
k8s/networkpolicies/: allow-all-ingress.yaml
k8s/rbac/: webserver-role-binding.yaml  webserver-role.yaml  webserver-service-account.yaml
k8s/tls/: clusterissuer.yaml  lets-encrypt-email-replacement.bash
telemetry/: otel-collector-config.yaml
